Add project code

--- a/project.ipynb
+++ b/project.ipynb
@@ -2,13 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib\n",
-    "\n",
-    "# Import the tables of the data set as dataframes.\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -36,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_DIR = \"../Lernnavi\"  # You many change the directory\n",
+    "DATA_DIR = \"../Lernnavi\"  # You may change the directory\n",
     "\n",
     "users = pd.read_csv(\"{}/users.csv.gz\".format(DATA_DIR))\n",
     "events = pd.read_csv(\"{}/study/events.csv.gz\".format(DATA_DIR))\n",
@@ -44,7 +41,7 @@
     "documents = pd.read_csv(\"{}/documents.csv.gz\".format(DATA_DIR))\n",
     "topics_translated = pd.read_csv(\"{}/topics_translated.csv\".format(DATA_DIR))\n",
     "topic_trees = pd.read_csv(\"{}/topic_trees.csv.gz\".format(DATA_DIR))\n",
-    "feedback = pd.read_csv(\"{}/feedback.csv.gz\".format(DATA_DIR))\n"
+    "feedback = pd.read_csv(\"{}/feedback.csv.gz\".format(DATA_DIR))"
    ]
   },
   {
